sentry-core/core/main/model/objects/Sentry_Rate_Limits__c/Sentry_Rate_Limits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sentry Rate Limits</label>
</CustomObject>