sentry-core/core/main/model/objects/Sentry_Rate_Limits__c/fields/DSN__c.field-meta.xml
<CustomField>
    <fullName>DSN__c</fullName>
    <label>DSN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>