sentry-core/core/main/model/objects/Sentry_Rate_Limits__c/fields/Until__c.field-meta.xml
<CustomField>
    <fullName>Until__c</fullName>
    <label>Until</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>